plugins {
	id 'fabric-loom' version '1.17-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version + "-" + minecraft_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}

	maven {
		name = "Gegy"
		url = "https://maven.gegy.dev/"
	}
}

loom {
    splitEnvironmentSourceSets()

	mods {
		"bbs" {
			sourceSet sourceSets.main
		}
	}

	accessWidenerPath.set(getRootProject().file("src/main/resources/bbs.accesswidener"))

	runs {
		client {
			vmArgs "-Dorg.lwjgl.openal.libname=${project.file('resources/audio/soft_oal.dll').absolutePath}"
		}
	}
}

configurations {
	sodiumIrisRuntime {
		canBeConsumed = false
		canBeResolved = true
		transitive = false
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
	modImplementation "dev.lambdaurora.lambdynamiclights:lambdynamiclights-api:${project.lambdynamiclights_api_version}"
	
	// Uncomment the following line to enable the deprecated Fabric API modules. 
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
	/*
	 * Sodium 0.8.x + Iris 1.8.14-beta must NOT go through Loom remapping on Yarn:
	 * remapped jars break mixins (Iris NPE on missing iris-fabric.refmap.json,
	 * Sodium BakedQuad @Overwrite failures). Compile against remapped copies;
	 * load the original intermediary jars from run/mods at runtime.
	 */
	modCompileOnly "maven.modrinth:sodium:mc1.21.1-0.8.12-fabric"
	modCompileOnly "maven.modrinth:iris:1.8.14-beta.1+1.21.1-fabric"
	sodiumIrisRuntime "maven.modrinth:sodium:mc1.21.1-0.8.12-fabric"
	sodiumIrisRuntime "maven.modrinth:iris:1.8.14-beta.1+1.21.1-fabric"
	modImplementation "maven.modrinth:watermedia:2.1.37"
	modImplementation "maven.modrinth:lambdynamiclights:4.1.0+1.21.1"

	modImplementation "org.anarres:jcpp:1.4.14"
	modImplementation "io.github.douira:glsl-transformer:2.0.0-pre13"
}

/*
 * Copy unremapped Sodium/Iris jars into run/mods (Loom remapping breaks both on Yarn).
 * Patches applied:
 * - Iris: stub iris-fabric.refmap.json (missing from the published jar)
 * - Sodium: requireAnnotations=false so BakedQuad interface methods can merge under Yarn names
 */
tasks.register('copySodiumIrisToRunMods') {
	dependsOn configurations.sodiumIrisRuntime
	def runtimeFiles = provider { configurations.sodiumIrisRuntime.files }
	def modsDir = layout.projectDirectory.dir('run/mods')

	inputs.files(runtimeFiles)
	outputs.dir(modsDir)

	doLast {
		def destDir = modsDir.asFile
		destDir.mkdirs()

		runtimeFiles.get().each { File input ->
			def isIris = input.name.toLowerCase().contains('iris')
			def isSodium = input.name.toLowerCase().contains('sodium')
			def destName = isIris
				? 'iris-fabric-1.8.14-beta.1+mc1.21.1.jar'
				: 'sodium-fabric-0.8.12+mc1.21.1.jar'
			def dest = new File(destDir, destName)

			def temp = new File(temporaryDir, destName + '.tmp')
			temp.parentFile.mkdirs()

			java.util.zip.ZipInputStream zis = new java.util.zip.ZipInputStream(new FileInputStream(input))
			java.util.zip.ZipOutputStream zos = new java.util.zip.ZipOutputStream(new FileOutputStream(temp))
			byte[] buffer = new byte[8192]
			java.util.zip.ZipEntry entry
			boolean wroteFabricRefmap = false

			while ((entry = zis.nextEntry) != null)
			{
				if (entry.name == 'iris-fabric.refmap.json')
				{
					wroteFabricRefmap = true
				}

				byte[] content = null

				if (!entry.directory)
				{
					java.io.ByteArrayOutputStream bos = new java.io.ByteArrayOutputStream()
					int len

					while ((len = zis.read(buffer)) > 0)
					{
						bos.write(buffer, 0, len)
					}

					content = bos.toByteArray()

					/* Yarn/named remapping makes Sodium interface methods collide with
					   vanilla getters; relax overwrite annotation requirement. */
					if (isSodium && (entry.name == 'sodium-fabric.mixins.json' || entry.name == 'sodium-common.mixins.json'))
					{
						String text = new String(content, 'UTF-8')
						text = text.replace('"requireAnnotations": true', '"requireAnnotations": false')
						content = text.getBytes('UTF-8')
					}
				}

				zos.putNextEntry(new java.util.zip.ZipEntry(entry.name))

				if (content != null)
				{
					zos.write(content)
				}

				zos.closeEntry()
				zis.closeEntry()
			}

			if (isIris && !wroteFabricRefmap)
			{
				zos.putNextEntry(new java.util.zip.ZipEntry('iris-fabric.refmap.json'))
				zos.write('{"mappings":{},"data":{}}\n'.getBytes('UTF-8'))
				zos.closeEntry()
			}

			zis.close()
			zos.close()

			if (dest.exists())
			{
				dest.delete()
			}

			java.nio.file.Files.move(temp.toPath(), dest.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING)
		}
	}
}

tasks.matching { it.name == 'runClient' || it.name == 'configureClientLaunch' || it.name == 'prepareClientRun' }.configureEach {
	dependsOn 'copySodiumIrisToRunMods'
}

processResources {
    def replaceProperties = [
            "version": project.version
    ]

    inputs.properties replaceProperties

    filesMatching("fabric.mod.json") {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
